--- a/range/src/styles/Voice.scss
+++ b/range/src/styles/Voice.scss
@@ -36,6 +36,7 @@ div.Voice {
         margin: 0;
         font-size: 16px;
         font-weight: 400;
+        flex: 1;
 
         text-overflow: ellipsis;
         overflow: hidden;
